naam veranderd voor website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<a href="H01/index.php">beginnerscursus php</a>
+<a href="H01/index.php">H01</a>
 </body>
 </html>
