--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<a href="H01/index.php">H01</a>
+<a href="H01/index.php">H01</a><br>
+<a href="H02/index.php">H02</a>
 </body>
 </html>
