--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <a href="H01/index.php">H01</a><br>
-<a href="H02">H02</a>
+<a href="H02">H02</a><br>
+<a href="H03">H03</a><br>
 </body>
 </html>
