opdracht 1 is klaar

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <a href="H01/index.php">H01</a><br>
 <a href="H02">H02</a><br>
 <a href="H03">H03</a><br>
+<a href="H04">H04</a><br>
 </body>
 </html>
