--- a/H06/Opdracht6.2/index.html
+++ b/H06/Opdracht6.2/index.html
@@ -4,7 +4,7 @@
     <title>opdr 6.2</title>
 </head>
 <body>
-<form action="index.php" method="post">
+<form action="formulier.php" method="post">
     <label>Email: <input type="text" name="email" value=""></label>
     <br>
     <label>Password: <input type="password" name="wachtwoord" value=""></label>
