alles weer laten werken

--- a/H05/Opdracht5.4/index.html
+++ b/H05/Opdracht5.4/index.html
@@ -4,7 +4,7 @@
     <title>opdr 5.4</title>
 </head>
 <body>
-<form action="index.php" method="post">
+<form action="result.php" method="post">
     <label>Email: <input type="text" name="email" value=""></label>
     <br>
     <label>Password: <input type="password" name="password" value=""></label>
