--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <a href="H05">H05</a><br>
 <a href="H06">H06</a><br>
 <a href="H07">H07</a><br>
-<a href="H08">H08</a><br>
+<a href="Aftekenen">aftekenen</a><br>
 </body>
 </html>
